Add unicode representation of pieces